// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`if (float) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "if",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "float",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "float",
      },
    ],
    "instruction": "if",
    "lineNumber": 6,
  },
  {
    "arguments": [
      {
        "isInteger": false,
        "type": "literal",
        "value": 1.1,
      },
    ],
    "instruction": "push",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "else",
    "lineNumber": 8,
  },
  {
    "arguments": [
      {
        "isInteger": false,
        "type": "literal",
        "value": -1.1,
      },
    ],
    "instruction": "push",
    "lineNumber": 9,
  },
  {
    "arguments": [],
    "instruction": "ifEnd",
    "lineNumber": 10,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 11,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 13,
  },
]
`;

exports[`if (float) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 4
    i32.const 0
    i32.load
    if (result f32)  ;; label = @1
      f32.const 0x1.19999ap+0 (;=1.1;)
    else
      f32.const -0x1.19999ap+0 (;=-1.1;)
    end
    f32.store)
  (export "test" (func 0)))
"
`;

exports[`if (float) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`if (int) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "if",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "int",
      },
    ],
    "instruction": "if",
    "lineNumber": 6,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
    ],
    "instruction": "push",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "else",
    "lineNumber": 8,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": -1,
      },
    ],
    "instruction": "push",
    "lineNumber": 9,
  },
  {
    "arguments": [],
    "instruction": "ifEnd",
    "lineNumber": 10,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 11,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 13,
  },
]
`;

exports[`if (int) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 4
    i32.const 0
    i32.load
    if (result i32)  ;; label = @1
      i32.const 1
    else
      i32.const -1
    end
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`if (int) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`if (void) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "if",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "void",
      },
    ],
    "instruction": "if",
    "lineNumber": 5,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 6,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
    ],
    "instruction": "push",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 8,
  },
  {
    "arguments": [],
    "instruction": "else",
    "lineNumber": 9,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 10,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": -1,
      },
    ],
    "instruction": "push",
    "lineNumber": 11,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 12,
  },
  {
    "arguments": [],
    "instruction": "ifEnd",
    "lineNumber": 13,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 15,
  },
]
`;

exports[`if (void) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 0
    i32.load
    if  ;; label = @1
      i32.const 4
      i32.const 1
      i32.store
    else
      i32.const 4
      i32.const -1
      i32.store
    end)
  (export "test" (func 0)))
"
`;

exports[`if (void) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;
